# Lazarus

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  cluster_analysis.py  data_pipe.py  mkenv  requirements.txt
.localpython/Python-3.6.6/: Makefile.pre  config.status  pyconfig.h  python-config  python-config.py
.localpython/Python-3.6.6/Misc/: python-config.sh
.localpython/Python-3.6.6/Modules/: ld_so_aix
.localpython/Python-3.6.6/lib/pkgconfig/: python-3.6.pc
.localpython/Python-3.6.6/lib/python3.6/config-3.6m-x86_64-linux-gnu/: Makefile
Data/: README.md  diabetes-mellitus---data-dictionary.csv  pct_conn_adults_told_had_diabetes.csv  processor.py
Lazarus/: CMakeLists.txt  README.md
Lazarus/core/: CMakeLists.txt
Lazarus/core/include/lazarus/: Util.hpp  lazarus.hpp
Lazarus/core/src/: lazarus.cc
Lazarus/include/lazarus/: KFold.hpp
Lazarus/kfold/: CMakeLists.txt
Lazarus/lib/: CMakeLists.txt
Lazarus/lib/kfold/src/: KFold.cc
Lazarus/neural_network/: CMakeLists.txt
Lazarus/neural_network/include/neural_network/: multilayer_perceptron.hpp  perceptron.hpp
Lazarus/neural_network/src/: multilayer_perceptron.cc  perceptron.cc
Lazarus/onehot/: CMakeLists.txt
Lazarus/preprocessing/: CMakeLists.txt
Lazarus/preprocessing/kfold/: CMakeLists.txt
Lazarus/preprocessing/kfold/include/kfold/: KFold.hpp
Lazarus/preprocessing/kfold/src/: KFold.cc  kfold.cc
Lazarus/preprocessing/onehot/: CMakeLists.txt
Lazarus/preprocessing/onehot/include/onehot/: onehot.hpp
Lazarus/preprocessing/onehot/src/: onehot.cc
Lazarus/src/: Util.cc
Lazarus/svm/: CMakeLists.txt
Lazarus/svm/include/svm/: svm.hpp
Lazarus/svm/src/: svm.cc
Lazarus/test/: CMakeLists.txt  test_perceptron.cc  test_perceptron.hpp
Lazarus/util/: CMakeLists.txt
Lazarus/util/include/util/: util.hpp
Lazarus/util/src/: util.cc
embed/: CMakeLists.txt  embed.cc
embed/include/: embed.h  embed.hh
neural/: .gitignore  CMakeLists.txt  nn.cc  requirements.txt
neural/include/: nn.h  nn.hh  nnet.hh
old/: mkenv
old/prediction_engine/: SVM_diabetes_classifier.py  clean.py  convert_xpt.R  far_field_predictor.py  neural_predictor.py  predictor.py  samples.txt
pancreas/: a3c_pancreas.py
pancreas/dqn/: agent.py  checkpoint.pth  pancreas.py  policy_network.py
pancreas/q/: q_alg.py
prediction_engine/: base.py  clean.py  convert_xpt.R  far_field_predictor.py  merge_data.py  predictor.py  samples.txt  scrape_dataset.R
q/: a3c_pancreas.py  data_model.py  memory.py  random_agent.py  simulation.py
sim/: reactive_sim.py  sim.py
sim/results/: adolescent#001.csv
test/: CMakeLists.txt  main.cc  test_perceptron.cc
test/include/test/: test.hpp
