cmake_minimum_required(VERSION 3.9)
project(lazarus LANGUAGES CXX)

set(LAZARUS_MAJOR_VERSION 0)
set(LAZARUS_MINOR_VERSION 1)
set(LAZARUS_PATCH_VERSION 0)
set(LAZARUS_TWEAK_VERSION 0)
set(LAZARUS_VERSION
  ${LAZARUS_MAJOR_VERSION}.${LAZARUS_MINOR_VERSION}.${LAZARUS_PATCH_VERSION}.${LAZARUS_TWEAK_VERSION}
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

include_directories("${PROJECT_SOURCE_DIR}/include")

add_executable(lazarus
  "${PROJECT_SOURCE_DIR}/src/"
)
